--- a/drawer-menu5.html
+++ b/drawer-menu5.html
@@ -5,9 +5,10 @@
 <title>無題ドキュメント</title>
 <style type="text/css">
   *, *:before, *:after {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	height: auto;
 }
 ol, ul {
 list-style: none;
@@ -17,23 +18,24 @@ text-decoration: none;
 color: inherit;
 }
 .cp_cont {
-height: 65vh;
+	/* [disabled]height: 65vh; */
+	background-color: #C4BFBF;
 }
 /* menu */
 .cp_offcm03 {
-position: relative;
-z-index: 5;
-top: 0;
-left: 0;
-overflow: auto;
-width: 100%;
-height: auto;
-padding-top: 0;
--webkit-transition: transform 0.3s ease-in;
-transition: transform 0.3s ease-in;
-text-align: center;
-color: #ffffff;
-background-color: #039be5;
+	position: fixed;
+	z-index: 5;
+	top: 0;
+	left: 0;
+	overflow: auto;
+	width: 100%;
+	height: auto;
+	padding-top: 0;
+	-webkit-transition: transform 0.3s ease-in;
+	transition: transform 0.3s ease-in;
+	text-align: center;
+	color: #ffffff;
+	background-color: #039be5;
 }
 .cp_offcm03 nav,
 .cp_offcm03 ul {
@@ -70,11 +72,12 @@ display: none;
 }
 /* content */
 .cp_container {
-position: relative;
-top: 0;
-padding: 35px auto;
--webkit-transition: transform .3s ease-in;
-transition: transform .3s ease-in;
+	position: relative;
+	top: 0;
+	padding: 35px auto;
+	-webkit-transition: transform .3s ease-in;
+	transition: transform .3s ease-in;
+	height: 1000px;
 }
 .cp_content {
 margin: 0 auto;
@@ -184,7 +187,7 @@ height: 92vh;
 </head>
 
 <body>
-  <div class="cp_cont">
+ 
 <input type="checkbox" id="cp_toggle03">
 <div class="cp_mobilebar">
 <label for="cp_toggle03" class="cp_menuicon">
@@ -202,11 +205,7 @@ height: 92vh;
 </ul>
 </nav>
 </header>
-<div class="cp_container">
-<div class="cp_content">
-<h1>contents</h1>
-</div>
-</div>
-</div>
+
+
 </body>
 </html>
